src/index.css
* {
  box-sizing: border-box;
  margin-block-start: 0px;
  margin-block-end: 0px;
  cursor: default;
  font-family: "Roboto", sans-serif;
}

@media screen and (max-width: 359px) {
  #root > *:not(.resolution-warning) {
    display: none;
  }
}

@media screen and (min-width: 360px) {
  .resolution-warning {
    display: none;
  }

  body {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
  }

  #root {
    min-width: 80%;
    height: 98%;
    padding: 20px;
    margin: 10px;
    display: flex;
    flex-direction: column;
    border: 1px solid #e5e5e5;
    border-radius: 12px;
    box-shadow: -4px 6px 4px 5px rgba(69, 129, 202, 0.103);
  }
  .info-element {
    margin-top: 20px;
  }
  .select-currency-wrapper {
    margin-top: 15px;
    display: flex;
    justify-content: space-between;
    /* align-items: center; */
  }

  .heading-date-wrapper {
    margin-top: 23px;
  }

  .details-page-content-wrapper {
    width: 100%;
    margin-top: 45px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

@media screen and (min-width: 1024px) {
  #root {
    min-width: 0;
    width: 885px;
    height: 609px;
    padding: 38px 93px 72px 93px;
  }

  .select-currency-wrapper {
    margin-top: 28px;
  }

  .details-page-content-wrapper {
    flex-direction: row;
    flex-wrap: wrap;
  }
}

